Contact,Stack & Deployment pending

--- a/movingPortfolio/index.html
+++ b/movingPortfolio/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moving Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
     <svg version="1.1"class="wave"
-    xlmns="http://wwww.w3.org/200/svg"></svg>
+    xlmns="http://wwww.w3.org/200/svg">
     <path 
         d="
         M0 67
@@ -72,8 +72,8 @@
 
     <header>
         <ul>
-            <li>Home</li>
-            <li>Contact</li>
+            <a href="index.html"><li>Home</li></a>
+            <a href="src/pages/contact.html"><li>Contact</li></a>
         </ul>
     </header>
 
@@ -99,6 +99,13 @@
     </section>
 
     <footer>
+        <h2>Software and Course Creator</h2>
+        <div class="options">
+            <a href="src/pages/work.html">WORK</a>
+            <a href="src/pages/about.html">ME</a>
+            <a href="src/pages/stack.html">STACK</a>
+        </div>
+
         <ul>
             <a href="#"><li>Twitter</li></a>
             <a href="#"><li>Github</li></a>
