show More Button -completed

--- a/showMoreButton/index.html
+++ b/showMoreButton/index.html
@@ -13,10 +13,34 @@
 
         </div>
         <div class="info">
-
+            <h2>Title 1</h2>
         </div>
         <div class="description">
-            
+            <div class="expandMoreContent" id="showMoreContent1">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis sequi reprehenderit expedita eligendi voluptas maxime, aliquid omnis tempora quas aspernatur libero voluptatum nisi odio vero ad eos earum. Fugiat, voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus nesciunt illum iusto nobis enim alias, reiciendis consequuntur voluptatum officiis soluta! Voluptates aut maiores aperiam explicabo rerum? Similique delectus neque alias?
+                </p>
+            </div>
+            <div class="expandMoreHolder">
+                <span expand-more data-hidetext= "Show Less.." data-showtext="Show More.." data-target="showMoreContent1" class="btn-expand">...Show More</span>
+            </div>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="placeholder-for-image">
+
+        </div>
+        <div class="info">
+            <h2>Title 2</h2>
+        </div>
+        <div class="description">
+            <div class="expandMoreContent" id="showMoreContent1">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis sequi reprehenderit expedita eligendi voluptas maxime, aliquid omnis tempora quas aspernatur libero voluptatum nisi odio vero ad eos earum. Fugiat, voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus nesciunt illum iusto nobis enim alias, reiciendis consequuntur voluptatum officiis soluta! Voluptates aut maiores aperiam explicabo rerum? Similique delectus neque alias?
+                </p>
+            </div>
+            <div class="expandMoreHolder">
+                <span expand-more data-hidetext= "Show Less.." data-showtext="Show More.." data-target="showMoreContent1" class="btn-expand">...Show More</span>
+            </div>
         </div>
     </div>
     <script src="app.js"></script>
