project pics to be added -completed upto 50mmin.

--- a/lightandDark/index.html
+++ b/lightandDark/index.html
@@ -13,6 +13,42 @@
             <div class="flicker"></div>
         </div>
     </header>
+
+    <section class="main">
+        <div class="main-text">
+            <h1>Anil Kumar</h1>
+            <p>Welcome to my Page!</p>
+            <br>
+            <p>I am a Mechanical Engineer and a Coder. Born in Himachal Pardesh and lived and raised in Chandigarh.</p>
+            <br>
+            <a>Contact me</a>
+        </div>
+    </section>
+
+    <section class="sub-section">
+        <div class="square">
+            <h2>Payment Dashboard</h2>
+            <p>A B2B Payment Tracker</p>
+        </br>
+        <a href=""Check it Out></a>
+        </div>
+        <div class="square">
+            <h2>News App</h2>
+            <p>An App to Track News</p>
+        </br>
+        <a href=""Check it Out></a>
+        </div>
+        <div class="square">
+            <h2>Dating App</h2>
+            <p>An App for Dates</p>
+        </br>
+        <a href=""Check it Out></a>
+        </div>
+    </section>
+
+    <footer id="footer">
+        <p>imneocoder@gmail.com</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
