--- a/typewriter/index.html
+++ b/typewriter/index.html
@@ -8,8 +8,7 @@
     <title>Typewriter</title>
 </head>
 <body>
-    
-
+    <h1 id="text"></h1>
     <script src="app.js"></script>
 </body>
 </html>
