--- a/animationPortfolio/index.html
+++ b/animationPortfolio/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="sky">
+        <img src="images/mountains.png" alt="mountains" id="mountains">
+        <img src="images/cloud.png" alt="cloud" id="cloud-one"/>
+        <img src="images/cloud.png" alt="cloud" id="cloud-two"/>
+        <img src="images/cloud.png" alt="cloud" id="cloud-three"/>
+        <img src="images/cloud.png" alt="cloud" id="cloud-four"/>
+        <img src="images/cloud.png" alt="cloud" id="cloud-five"/>
+        <img src="images/js.png" alt="js" id="javascript"/>
+        <img src="images/react.png" alt="react" id="react"/>
+        <img src="images/gql.png" alt="gql" id="graphql"/>
+        <img src="images/air-balloon.png" alt="air-balloon" id="air-balloon">
+    </section>
+    <section class="about-me"></section>
+    <h1>Let's Learn</h1>
+
+
 
     
     <script src= "app.js"></script>
